# linear-regression-

./: README.md  pyproject.toml  regression.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml  regression-checkpoint.ipynb
