[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["rawnaq <engrawnaqaburummn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.3"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
seaborn = "^0.11.2"
sklearn = "^0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
